--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -274,8 +274,8 @@
                             <thead class="bg-primary-gradient ms-auto divShadow">
                                 <tr>
                                     <th class="text-white">@Localizer["Category"]</th>
-                                    <th class="text-white">@Localizer["NumberOfAssets"]</th>
-                                    <th class="text-white">@Localizer["TotalCost"]</th>
+                                    <th class="text-white">@Localizer["Count"]</th>
+                                    <th class="text-white">@Localizer["Cost"]</th>
                                 </tr>
                             </thead>
                             <tbody>
