--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -196,8 +196,8 @@
                                     <tr>
                                         <th class="text-white">@Localizer["Category"]</th>
                                         <th class="text-white">@Localizer["SubCategory"]</th>
-                                        <th class="text-white">@Localizer["TotalAssets"]</th>
-                                        <th class="text-white">@Localizer["TotalCost"]</th>
+                                        <th class="text-white">@Localizer["Count"]</th>
+                                        <th class="text-white">@Localizer["Cost"]</th>
                                     </tr>
                                 </thead>
                                 <tbody>
